(library
 (name vscode_jsonrpc)
 (public_name vscode-jsonrpc)
 (libraries js_of_ocaml ojs node)
 (modes byte)
 (js_of_ocaml
  (javascript_files stub.js)))

(rule
 (targets vscode_jsonrpc_api.ml)
 (deps vscode_jsonrpc_api.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_cancellation.ml)
 (deps vscode_jsonrpc_cancellation.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_connection.ml)
 (deps vscode_jsonrpc_connection.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_disposable.ml)
 (deps vscode_jsonrpc_disposable.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_encoding.ml)
 (deps vscode_jsonrpc_encoding.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_events.ml)
 (deps vscode_jsonrpc_events.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_is.ml)
 (deps vscode_jsonrpc_is.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc.ml)
 (deps vscode_jsonrpc.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_message_buffer.ml)
 (deps vscode_jsonrpc_message_buffer.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_message_reader.ml)
 (deps vscode_jsonrpc_message_reader.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_message_writer.ml)
 (deps vscode_jsonrpc_message_writer.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_messages.ml)
 (deps vscode_jsonrpc_messages.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_ral.ml)
 (deps vscode_jsonrpc_ral.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_ril.ml)
 (deps vscode_jsonrpc_ril.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_jsonrpc_semaphore.ml)
 (deps vscode_jsonrpc_semaphore.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
