(library
 (name vscode_languageclient)
 (public_name vscode-languageclient)
 (libraries js_of_ocaml ojs es5 vscode vscode-languageserver-protocol)
 (modes byte))

(rule
 (targets vscode_languageclient_api.ml)
 (deps vscode_languageclient_api.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_async.ml)
 (deps vscode_languageclient_async.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_call_hierarchy.ml)
 (deps vscode_languageclient_call_hierarchy.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_client.ml)
 (deps vscode_languageclient_client.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_code_converter.ml)
 (deps vscode_languageclient_code_converter.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_color_provider.ml)
 (deps vscode_languageclient_color_provider.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_common_client.ml)
 (deps vscode_languageclient_common_client.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_configuration.ml)
 (deps vscode_languageclient_configuration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_declaration.ml)
 (deps vscode_languageclient_declaration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_file_operations.ml)
 (deps vscode_languageclient_file_operations.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_folding_range.ml)
 (deps vscode_languageclient_folding_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_implementation.ml)
 (deps vscode_languageclient_implementation.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_is.ml)
 (deps vscode_languageclient_is.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_linked_editing_range.ml)
 (deps vscode_languageclient_linked_editing_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_main.ml)
 (deps vscode_languageclient_main.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_processes.ml)
 (deps vscode_languageclient_processes.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_progress.ml)
 (deps vscode_languageclient_progress.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_progress_part.ml)
 (deps vscode_languageclient_progress_part.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_proposed_diagnostic.ml)
 (deps vscode_languageclient_proposed_diagnostic.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_call_hierarchy_item.ml)
 (deps vscode_languageclient_protocol_call_hierarchy_item.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_code_action.ml)
 (deps vscode_languageclient_protocol_code_action.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_code_lens.ml)
 (deps vscode_languageclient_protocol_code_lens.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_completion_item.ml)
 (deps vscode_languageclient_protocol_completion_item.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_converter.ml)
 (deps vscode_languageclient_protocol_converter.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_diagnostic.ml)
 (deps vscode_languageclient_protocol_diagnostic.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_protocol_document_link.ml)
 (deps vscode_languageclient_protocol_document_link.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_selection_range.ml)
 (deps vscode_languageclient_selection_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_semantic_tokens.ml)
 (deps vscode_languageclient_semantic_tokens.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_type_definition.ml)
 (deps vscode_languageclient_type_definition.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_uuid.ml)
 (deps vscode_languageclient_uuid.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageclient_workspace_folders.ml)
 (deps vscode_languageclient_workspace_folders.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
