(library
 (name vscode_languageserver_protocol)
 (public_name vscode-languageserver-protocol)
 (libraries js_of_ocaml ojs es5 vscode-jsonrpc vscode-languageserver-types)
 (modes byte))

(rule
 (targets vscode_languageserver_protocol_api.ml)
 (deps vscode_languageserver_protocol_api.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_connection.ml)
 (deps vscode_languageserver_protocol_connection.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_is.ml)
 (deps vscode_languageserver_protocol_is.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_main.ml)
 (deps vscode_languageserver_protocol_main.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_messages.ml)
 (deps vscode_languageserver_protocol_messages.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_proposed_diagnostic.ml)
 (deps vscode_languageserver_protocol_proposed_diagnostic.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol.ml)
 (deps vscode_languageserver_protocol_protocol.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_callHierarchy.ml)
 (deps vscode_languageserver_protocol_protocol_callHierarchy.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_colorProvider.ml)
 (deps vscode_languageserver_protocol_protocol_colorProvider.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_configuration.ml)
 (deps vscode_languageserver_protocol_protocol_configuration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_declaration.ml)
 (deps vscode_languageserver_protocol_protocol_declaration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_fileOperations.ml)
 (deps vscode_languageserver_protocol_protocol_fileOperations.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_foldingRange.ml)
 (deps vscode_languageserver_protocol_protocol_foldingRange.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_implementation.ml)
 (deps vscode_languageserver_protocol_protocol_implementation.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_linkedEditingRange.ml)
 (deps vscode_languageserver_protocol_protocol_linkedEditingRange.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_moniker.ml)
 (deps vscode_languageserver_protocol_protocol_moniker.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_progress.ml)
 (deps vscode_languageserver_protocol_protocol_progress.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_selectionRange.ml)
 (deps vscode_languageserver_protocol_protocol_selectionRange.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_semanticTokens.ml)
 (deps vscode_languageserver_protocol_protocol_semanticTokens.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_showDocument.ml)
 (deps vscode_languageserver_protocol_protocol_showDocument.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_typeDefinition.ml)
 (deps vscode_languageserver_protocol_protocol_typeDefinition.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_workspaceFolders.ml)
 (deps vscode_languageserver_protocol_protocol_workspaceFolders.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
