(library
 (name vscode_languageserver_protocol)
 (public_name vscode-languageserver-protocol)
 (libraries js_of_ocaml ojs es5 vscode-jsonrpc vscode-languageserver-types)
 (modes byte))

(rule
 (targets vscode_languageserver_protocol_api.ml)
 (deps vscode_languageserver_protocol_api.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_connection.ml)
 (deps vscode_languageserver_protocol_connection.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_is.ml)
 (deps vscode_languageserver_protocol_is.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_main.ml)
 (deps vscode_languageserver_protocol_main.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_messages.ml)
 (deps vscode_languageserver_protocol_messages.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_proposed_diagnostic.ml)
 (deps vscode_languageserver_protocol_proposed_diagnostic.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol.ml)
 (deps vscode_languageserver_protocol_protocol.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_call_hierarchy.ml)
 (deps vscode_languageserver_protocol_protocol_call_hierarchy.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_color_provider.ml)
 (deps vscode_languageserver_protocol_protocol_color_provider.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_configuration.ml)
 (deps vscode_languageserver_protocol_protocol_configuration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_declaration.ml)
 (deps vscode_languageserver_protocol_protocol_declaration.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_file_operations.ml)
 (deps vscode_languageserver_protocol_protocol_file_operations.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_folding_range.ml)
 (deps vscode_languageserver_protocol_protocol_folding_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_implementation.ml)
 (deps vscode_languageserver_protocol_protocol_implementation.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_linked_editing_range.ml)
 (deps vscode_languageserver_protocol_protocol_linked_editing_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_moniker.ml)
 (deps vscode_languageserver_protocol_protocol_moniker.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_progress.ml)
 (deps vscode_languageserver_protocol_protocol_progress.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_selection_range.ml)
 (deps vscode_languageserver_protocol_protocol_selection_range.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_semantic_tokens.ml)
 (deps vscode_languageserver_protocol_protocol_semantic_tokens.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_show_document.ml)
 (deps vscode_languageserver_protocol_protocol_show_document.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_type_definition.ml)
 (deps vscode_languageserver_protocol_protocol_type_definition.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_languageserver_protocol_protocol_workspace_folders.ml)
 (deps vscode_languageserver_protocol_protocol_workspace_folders.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
