(library
 (name vscode_test)
 (public_name vscode-test)
 (libraries js_of_ocaml ojs es5)
 (modes byte))

(rule
 (targets vscode_test_del.ml)
 (deps vscode_test_del.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_test_download.ml)
 (deps vscode_test_download.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_test_index.ml)
 (deps vscode_test_index.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_test_request.ml)
 (deps vscode_test_request.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_test_runTest.ml)
 (deps vscode_test_runTest.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))

(rule
 (targets vscode_test_util.ml)
 (deps vscode_test_util.mli)
 (mode promote)
 (action
  (run %{bin:gen_js_api} %{deps} -o %{targets})))
